--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Oleg Ambrosevich <ambrosevichoe@yandex.ru>",
   "license": "MIT",
   "dependencies": {
+    "@ant-design/icons": "4.2.2",
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.3.2",
     "@testing-library/user-event": "7.1.2",
